style.css
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Outfit", serif;
}

html {
    scroll-behavior: smooth;
}

.homepage {
  width: 100%;
  height: 100vh;
  padding: 20px;
}

.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.navbar h1 {
  font-size: 2em;
  text-transform: uppercase;
}

.navbar a {
  text-decoration: none;
}

.nav-items {
  display: flex;
  gap: 20px;
  list-style: none;
}

.nav-items a {
    color: black;
}

.home-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 90%;
}

.home-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 50%;
}

.home-content h1 {
  font-size: 3em;
}

.home-content p {
  text-align: center;
  margin-top: 10px;
}

.profile-picture img {
  border-radius: 50%;
}

.education-page {
  width: 100%;
  height: 100vh;
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.education-page h1 {
  text-align: center;
  font-size: 4em;
}

.education-page h3,
p {
  text-align: center;
  line-height: 2;
  font-size: 20px;
}

.skills-page {
  width: 100%;
  height: 100vh;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.skills-page h1 {
  text-align: center;
  font-size: 4em;
}

.skills-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  margin: 10px;
}

.bubble {
  border: 3px solid black;
  padding: 10px 20px;
  border-radius: 100px;
}

.projects-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
}

.project-card {
  width: 400px;
  border: 3px solid black;
  padding: 30px;
  margin: 20px;
  border-radius: 50px;
}

.project-card h3 {
  font-size: 1.5em;
}

.project-card p {
  text-align: left;
}

.project-button {
  outline: none;
  padding: 10px;
  margin: 10px 0;
  color: white;
  background: black;
  border-radius: 50px;
}

.contact-page {
  width: 100%;
  height: 100vh;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.contact-page h1 {
  font-size: 3em;
}

.mail-button {
  text-decoration: none;
  color: black;
}

.social-buttons {
  display: flex;
  gap: 20px;
}

.social-buttons button {
  outline: none;
  padding: 10px;
  margin: 20px 0;
  border-radius: 50px;
  border: 2px solid black;
  font-size: 1em;
  background: transparent;
  cursor: pointer;
}

.social-buttons button:hover {
  color: white;
  background-color: black;
  transition: 0.2s ease;
}

